# iLL

./: .gitignore  Cargo.toml  DEFERRED.md  LICENSE  README.md
.claude-plugin/: plugin.json
commands/: ill-test.md
crates/ill/: Cargo.toml
crates/ill-core/: Cargo.toml
crates/ill-core/src/: ast.rs  diagnostic.rs  lib.rs  lower.rs  registry.rs  render.rs  report_format.rs  test_util.rs  validate.rs
crates/ill-core/src/actor_type/: mod.rs  outcome.rs
crates/ill-core/src/actor_type/args_actor/: mod.rs  runtime.rs
crates/ill-core/src/actor_type/container/: commands.rs  mod.rs  modes.rs  runtime.rs
crates/ill-core/src/actor_type/exec/: commands.rs  mod.rs  modes.rs  runtime.rs
crates/ill-core/src/actor_type/http_client/: commands.rs  mod.rs  modes.rs
crates/ill-core/src/actor_type/mqtt_client/: commands.rs  mod.rs  modes.rs  runtime.rs
crates/ill-core/src/actor_type/pg_client/: commands.rs  convert.rs  mod.rs  modes.rs  runtime.rs
crates/ill-core/src/runtime/: assert.rs  eval.rs  harness.rs  members.rs  mod.rs  report.rs  report_format.rs  sigil.rs  value.rs
crates/ill-core/src/runtime/sigil/: hex.rs  json.rs  mod.rs  re.rs  sql.rs
crates/ill-core/src/runtime/squiggle/: bytes.rs  hex.rs  json.rs  mod.rs  re.rs  sql.rs
crates/ill-core/src/snapshots/: ill_core__render__tests__snapshot_parse_error.snap  ill_core__render__tests__snapshot_validation_error.snap  ill_core__render__tests__snapshot_zero_length_span_widens.snap
design/: ROADMAP.md  TODO.md
examples/: readme.ill
examples/built-in/: args.ill  env-and-args.ill  env.ill  escapes.ill
examples/container/: basic.ill  dockerfile.ill  env.ill  multi_container.ill
examples/exec/: basic.ill  failing.ill  paths.ill  with_cwd.ill
examples/mqtt/: basic.ill  (+5 more)
tree-sitter-ill/: Cargo.toml  grammar.js  package-lock.json  package.json  tree-sitter.json
tree-sitter-ill/bindings/rust/: build.rs  lib.rs
tree-sitter-ill/queries/: highlights.scm  injections.scm
tree-sitter-ill/src/: grammar.json  node-types.json  parser.c  scanner.c
vscode-ill/: language-configuration.json  package.json
(+26 files in other folders)
