[package]
name = "tree-sitter-ill"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Tree-sitter grammar for the iLL integration testing language"
build = "bindings/rust/build.rs"

[dependencies]
tree-sitter-language = "0.1"

[lib]
path = "bindings/rust/lib.rs"

[build-dependencies]
cc = "1"
