[package]
name = "ill-core"
description = "Core library for iLL — AST types and tree-sitter CST lowering"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shlex = "1"
thiserror = "2"
tree-sitter = "0.26"
tree-sitter-ill = { path = "../../tree-sitter-ill" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
glob = "0.3"
