[package]
name = "ill-core"
description = "Core library for iLL — AST types and tree-sitter CST lowering"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1"
bytes = "1"
indexmap = "2"
regex = "1"
rumqttc = "0.24"
shlex = "1"
testcontainers = "0.27"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "io-util", "sync"] }
tokio-postgres = "0.7"
tree-sitter = "0.26"
tree-sitter-ill = { path = "../../tree-sitter-ill" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
glob = "0.3"
